--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realtà - Inicio</title>
+    
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <nav class="menu">       
+    <nav class="menu sticky-top">     
         <ul>
             <li class="menu-item-activo">
                 <a href="index.html">INICIO</a>            
@@ -24,7 +26,7 @@
                 <a href="contacto.html">CONTACTO</a>
             </li>
         </ul>
-    </nav>  
+    </nav>    
     
     <header>
         <!-- Galeria de imagenes deslizantes -->
