Bootstrap grid footer

--- a/index.html
+++ b/index.html
@@ -82,49 +82,44 @@
     </main>
 
 
-    <footer class="pie">
-        <div class="pie-padre">
-            <div class="pie-nieto"><!-- Footer - derechos registrados y demas -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quasi voluptas cum amet officiis distinctio!
-    
-                </p>   
-            </div>
-            <div><!-- Footer - redes sociales -->
-                <h3>Social</h3>
-                <ul class="pie-nieto">
+    <footer class="pie row justify-content-between text-center">
+        <div class="col-12 col-lg-4">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-12 col-lg-4">
+            <h3>Social</h3>
+            <ul>
+                <li>
+                <a>Twitter</a>            
+                </li>
+                <li>
+                <a>Facebook</a>
+                </li>
+                <li>
+                <a>Instagram</a>
+                </li>
+                <li>
+                <a>Youtube</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-12 col-lg-4">
+            <h3>Enlaces</h3>
+                <ul>
                     <li>
-                    <a>Twitter</a>            
+                        <a href="index.html">INICIO</a>            
                     </li>
                     <li>
-                    <a>Facebook</a>
+                        <a href="servicios.html">SERVICIOS</a>
                     </li>
                     <li>
-                    <a>Instagram</a>
+                        <a href="galeria.html">GALERIA</a>
                     </li>
                     <li>
-                    <a>Youtube</a>
+                        <a href="contacto.html">CONTACTO</a>
                     </li>
                 </ul>
-            </div>
-            
-            <div><!-- Footer - enlaces -->
-                <h3>Enlaces</h3>
-                <ul class="pie-nieto">
-                <li>
-                    <a href="index.html">INICIO</a>            
-                </li>
-                <li>
-                    <a href="servicios.html">SERVICIOS</a>
-                </li>
-                <li>
-                    <a href="galeria.html">GALERIA</a>
-                </li>
-                <li>
-                    <a href="contacto.html">CONTACTO</a>
-                </li>
-                </ul>
-            </div>
-        </div>   
+        </div>    
     </footer>
 
 <script src="./js/bootstrap.bundle.js"></script>
