Bootstrap grid y cards servicios

--- a/servicios.html
+++ b/servicios.html
@@ -28,39 +28,34 @@
         </ul>
     </nav>  
 
-    <main class="servicios">
-        
-        <section class="contenedor-padre">
-            <div class="contenedor-hijo">
-                <img class=mediana src="https://picsum.photos/200?random=1">
+    <main>     
+        <section class="row justify-content-center gap-4">
+            <div class="card text-center col-12 col-md-5 col-lg-3 justify-content-md-center">
+                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=1">
                 <h2>Asesoramiento</h2>
-                <p>Te orientamos a partir de tu idea o tu boceto, desde el punto de vista profesional, para que puedas llegar a un proyecto de calidad.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
-
-            <div class="contenedor-hijo">
-                <img class=mediana src="https://picsum.photos/200?random=2">
+            <div class="card text-center col-12 col-md-5 col-lg-3">
+                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=2">
                 <h2>Proyecto</h2>
-                <p>Te acompañamos desde las primeras ideas hasta concretar un proyecto, realizando toda la documentación que requiere un anteproyecto y un proyecto ejecutivo, tanto para la comprensión del cliente, facilitando las elecciones a lo largo del proceso, como para su posterior ejecución.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
-
-            <div class="contenedor-hijo">
-                <img class=mediana src="https://picsum.photos/200?random=3">
+            <div class="card text-center col-12 col-md-5 col-lg-3">
+                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=3">
                 <h2>Direccion</h2>
-                <p>Garantizamos resultados en tiempo y forma para todos los proyectos, con el seguimiento que corresponde y los requerimientos de cada obra.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
-
-            <div class="contenedor-hijo">
-                <img class=mediana src="https://picsum.photos/200?random=4">
+            <div class="card text-center col-12 col-md-5 col-lg-3">
+                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=4">
                 <h2>Interiorismo</h2>
-                <p>Te asesoramos con el diseño interior de cada espacio, pensando cada detalle a lo largo de la etapa de proyecto para que el diseño interior sea parte de la obra en su totalidad, y no se vea condicionado por decisiones tomadas en la etapa anterior. En caso de remodelaciones, buscamos la mejor forma de potenciar el espacio ya existente.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
-
-            <div class="contenedor-hijo">
-                <img class=mediana src="https://picsum.photos/200?random=5">
+            <div class="card text-center col-12 col-md-5 col-lg-3">
+                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=5">
                 <h2>Renders</h2>
-                <p>Materializamos (no se que palabra iría aca, no es materializar) tus ideas en 3D para que puedas entender en escala el espacio que vas a habitar, y para que puedas conocerlo antes de su ejecución.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
-
+        </section>
     </main>
 
     <footer class="pie row justify-content-between text-center">
