Media queries y menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <nav class="menu sticky-top">     
+    <nav class="menu sticky-top">
+        <input type="checkbox" id="check-menu">
+        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i></label>     
         <ul>
             <li class="menu-item-activo">
                 <a href="index.html">INICIO</a>            
