Agregando  SASS, gitignore y mejora imagenes

--- a/contacto.html
+++ b/contacto.html
@@ -75,7 +75,7 @@
                             <a>Instagram</a>
                         </li>
                         <li>
-                            <img class=pequeña src="./images/youtube.png">
+                            <img class=pequeña src="./images/youtube.jpg">
                             <a>Youtube</a>
                         </li>
                         </ul>
