--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://picsum.photos/200?random=1" class="d-block w-100 slide" alt="...">
+                <img src="./images/slide01.jpg" class="d-block w-100 slide" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/200?random=2" class="d-block w-100 slide" alt="...">
+                <img src="./images/slide02.jpg" class="d-block w-100 slide" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/200?random=3" class="d-block w-100 slide" alt="...">
+                <img src="./images/slide03.jpg" class="d-block w-100 slide" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./images/slide04.jpg" class="d-block w-100 slide" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
