Agrega queries SASS y modifica img y pie

--- a/contacto.html
+++ b/contacto.html
@@ -87,8 +87,9 @@
 
 
     <footer class="pie row justify-content-between text-center">
-        <div class="col-12 col-lg-4">
-            <p>Lorem ipsum dolor sit amet.</p>
+        <div class="dis der-dis-lg col-12 col-lg-4">
+            <p class="dis d-flex justify-content-start">Todos los derechos reservados</p>
+            <p class="dis fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
         </div>
         <div class="col-12 col-lg-4">
             <h3>Social</h3>
@@ -123,7 +124,11 @@
                         <a href="contacto.html">CONTACTO</a>
                     </li>
                 </ul>
-        </div>    
+        </div>   
+        <div class="dis d-lg-none col-12 col-lg-3">
+            <p class="dis d-flex">Todos los derechos reservados</p>
+            <p class="dis d-flex">Diseñado por RM-Diseño</p>
+        </div> 
     </footer>
 
 </body>
