--- a/servicios.html
+++ b/servicios.html
@@ -34,27 +34,27 @@
     <main>     
         <section class="row justify-content-center gap-4">
             <div class="card text-center col-12 col-md-5 col-lg-3 justify-content-md-center">
-                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=1">
+                <img class="servicios mx-auto d-block" src="./images/serv-asesoramiento.jpg">
                 <h2>Asesoramiento</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
-                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=2">
+                <img class="servicios mx-auto d-block" src="./images/serv-proyecto.jpg">
                 <h2>Proyecto</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
-                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=3">
-                <h2>Direccion</h2>
+                <img class="servicios mx-auto d-block" src="./images/serv-direccion.jpg">
+                <h2>Dirección</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
-                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=4">
+                <img class="servicios mx-auto d-block" src="./images/serv-interiorismo.jpeg">
                 <h2>Interiorismo</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
-                <img class="servicios mx-auto d-block" src="https://picsum.photos/200?random=5">
+                <img class="servicios mx-auto d-block" src="./images/serv-renders.jpeg">
                 <h2>Renders</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
             </div>
@@ -62,8 +62,9 @@
     </main>
 
     <footer class="pie row justify-content-between text-center">
-        <div class="col-12 col-lg-4">
-            <p>Lorem ipsum dolor sit amet.</p>
+        <div class="dis der-dis-lg col-12 col-lg-4">
+            <p class="dis d-flex justify-content-start">Todos los derechos reservados</p>
+            <p class="dis fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
         </div>
         <div class="col-12 col-lg-4">
             <h3>Social</h3>
@@ -98,7 +99,11 @@
                         <a href="contacto.html">CONTACTO</a>
                     </li>
                 </ul>
-        </div>    
+        </div>   
+        <div class="dis d-lg-none col-12 col-lg-3">
+            <p class="dis d-flex">Todos los derechos reservados</p>
+            <p class="dis d-flex">Diseñado por RM-Diseño</p>
+        </div> 
     </footer>
 
 </body>
