Retoques galeria y menu  responsive

--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="menu sticky-top">
         <input type="checkbox" id="check-menu">
-        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i></label>     
+        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i><img class="logo-pequeño" src="./images/logohor.jpg"></label>     
         <ul>
             <li class="menu-item">
                 <a href="index.html">INICIO</a>            
@@ -33,34 +33,29 @@
 
     <!-- galeria de imagenes -->
     <main class="galeria">
-        <img class=mediana src="https://picsum.photos/200?random=1">
-        <img class=mediana src="https://picsum.photos/200?random=2">
-        <img class=mediana src="https://picsum.photos/200?random=3">
-        <img class=mediana src="https://picsum.photos/200?random=4">
-        <img class=mediana src="https://picsum.photos/200?random=5">
-        <img class=mediana src="https://picsum.photos/200?random=6">
-        <img class=mediana src="https://picsum.photos/200?random=7">
-        <img class=mediana src="https://picsum.photos/200?random=8">
-        <img class=mediana src="https://picsum.photos/200?random=9">
-        <img class=mediana src="https://picsum.photos/200?random=10">
-        <img class=mediana src="https://picsum.photos/200?random=11">
-        <img class=mediana src="https://picsum.photos/200?random=12">
-        <img class=mediana src="https://picsum.photos/200?random=13">
-        <img class=mediana src="https://picsum.photos/200?random=14">
-        <img class=mediana src="https://picsum.photos/200?random=15">
-        <img class=mediana src="https://picsum.photos/200?random=16">
-        <img class=mediana src="https://picsum.photos/200?random=17">
-        <img class=mediana src="https://picsum.photos/200?random=18">
-        <img class=mediana src="https://picsum.photos/200?random=19">
-        <img class=mediana src="https://picsum.photos/200?random=20">
+        <img class=mediana src="./images/galeria01.jpeg">
+        <img class=mediana src="./images/galeria02.jpeg">
+        <img class=mediana src="./images/galeria03.jpeg">
+        <img class=mediana src="./images/galeria04.jpeg">
+        <img class=mediana src="./images/galeria05.jpeg">
+        <img class=mediana src="./images/galeria06.jpeg">
+        <img class=mediana src="./images/galeria07.jpeg">
+        <img class=mediana src="./images/galeria08.jpeg">
+        <img class=mediana src="./images/galeria09.jpeg">
+        <img class=mediana src="./images/galeria10.jpeg">
+        <img class=mediana src="./images/galeria11.jpeg">
+        <img class=mediana src="./images/galeria12.jpeg">
+        <img class=mediana src="./images/galeria13.jpeg">
+        <img class=mediana src="./images/galeria14.jpeg">
+        <img class=mediana src="./images/galeria15.jpeg">
     </main>
 
-    <footer class="pie row justify-content-between text-center">
+    <footer class="pie row justify-content-around text-center">
         <div class="dis der-dis-lg col-12 col-lg-4">
             <p class="dis d-flex justify-content-start">Todos los derechos reservados</p>
             <p class="dis fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-5 col-lg-4">
             <h3>Social</h3>
             <ul>
                 <li>
@@ -77,7 +72,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4">
             <h3>Enlaces</h3>
                 <ul>
                     <li>
@@ -94,9 +89,9 @@
                     </li>
                 </ul>
         </div>   
-        <div class="dis d-lg-none col-12 col-lg-3">
+        <div class="dis d-lg-none col-12 col-md-12 col-lg-4">
             <p class="dis d-flex">Todos los derechos reservados</p>
-            <p class="dis d-flex">Diseñado por RM-Diseño</p>
+            <p class="dis d-flex">Powered by RM-Diseños</p>
         </div> 
     </footer>
 </body>
