--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="menu sticky-top">
         <input type="checkbox" id="check-menu">
-        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i></label>     
+        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i><img class="logo-pequeño" src="./images/logohor.jpg"></label>     
         <ul>
             <li class="menu-item-activo">
                 <a href="index.html">INICIO</a>            
@@ -84,12 +84,12 @@
     </main>
 
 
-    <footer class="pie row justify-content-between text-center">
+    <footer class="pie row justify-content-around text-center">
         <div class="dis der-dis-lg col-12 col-lg-4">
             <p class="dis d-flex justify-content-start">Todos los derechos reservados</p>
             <p class="dis fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-5 col-lg-4">
             <h3>Social</h3>
             <ul>
                 <li>
@@ -106,7 +106,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4">
             <h3>Enlaces</h3>
                 <ul>
                     <li>
@@ -123,9 +123,9 @@
                     </li>
                 </ul>
         </div>   
-        <div class="dis d-lg-none col-12 col-lg-3">
+        <div class="dis d-lg-none col-12 col-md-12 col-lg-4">
             <p class="dis d-flex">Todos los derechos reservados</p>
-            <p class="dis d-flex">Diseñado por RM-Diseño</p>
+            <p class="dis d-flex">Powered by RM-Diseños</p>
         </div> 
     </footer>
 
