--- a/servicios.html
+++ b/servicios.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="menu sticky-top">
         <input type="checkbox" id="check-menu">
-        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i></label>     
+        <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i><img class="logo-pequeño" src="./images/logohor.jpg"></label>     
         <ul>
             <li class="menu-item">
                 <a href="index.html">INICIO</a>            
@@ -102,7 +102,7 @@
         </div>   
         <div class="dis d-lg-none col-12 col-lg-3">
             <p class="dis d-flex">Todos los derechos reservados</p>
-            <p class="dis d-flex">Diseñado por RM-Diseño</p>
+            <p class="dis d-flex">Powered by RM-Diseños</p>
         </div> 
     </footer>
 
