--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
     <nav class="menu sticky-top">
         <input type="checkbox" id="check-menu">
         <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i><img class="logo-pequeño" src="./images/logohor.jpg"></label>     
-        <ul>
+        <ul class="fadeInDown">
             <li class="menu-item">
                 <a href="index.html">INICIO</a>            
             </li>
@@ -33,7 +33,7 @@
 
     <!-- galeria de imagenes -->
     <main class="galeria">
-        <img class=mediana src="./images/galeria01.jpeg">
+        <img class="mediana pulse" src="./images/galeria01.jpeg">
         <img class=mediana src="./images/galeria02.jpeg">
         <img class=mediana src="./images/galeria03.jpeg">
         <img class=mediana src="./images/galeria04.jpeg">
