--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="menu sticky-top">
         <input type="checkbox" id="check-menu">
         <label for="check-menu" class="menu-mobile"><i class="bx bx-menu"></i><img class="logo-pequeño" src="./images/logohor.jpg"></label>     
-        <ul>
+        <ul class="fadeInDown">
             <li class="menu-item-activo">
                 <a href="index.html">INICIO</a>            
             </li>
