--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtà - Inicio</title>
+    <meta name="description" content="Realta - Aquitectura + Interiorismo. Estudio ubicado en la ciudad de Cipolletti - Rio Negro. Te ayudamos a diseñar la casa de tus sueños acompañandote en cada una de las etapas">
+    <meta name="keywords" content="Arquitectura, Interiorismo, Cipolletti, Rio Negro, Planos">
+    <title>Realtà - Arq + Interiorismo</title>
     
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -72,7 +74,7 @@
             <div class="index-hijo">
             <h1>Realtà</h1>
     
-            <p>REALTÀ es un estudio de arquitectura e interiorismo dedicado a la proyección, el diseño y la dirección, ubicado en la ciudad de Cipolletti. Surge como fusión entre la pasión por la arquitectura y el diseño de interiores, con el objetivo de acompañar a los clientes desde la primera idea hasta el proyecto hecho realidad. </p>
+            <p>REALTÀ es un estudio de arquitectura e interiorismo dedicado a la proyección, el diseño y la dirección de obra, ubicado en la ciudad de Cipolletti. Surge como fusión entre la pasión por la arquitectura y el diseño de interiores, con el objetivo de acompañar a los clientes desde la primera idea hasta el proyecto hecho realidad. </p>
             </div>
             </section>
 
