--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Realta - Aquitectura + Interiorismo. Estudio ubicado en la ciudad de Cipolletti - Rio Negro. Contactános">
+    <meta name="keywords" content="Arquitectura, Interiorismo, Cipolletti, Contacto, Redes">
     <title>Realtà - Contacto</title>
     
     <link rel="stylesheet" href="./css/bootstrap.css">
@@ -35,6 +37,7 @@
         <!--- Formulario de contacto -->
         <section class="row gap-4 justify-content-md-center">
             <div class="formulario col-12 col-md-5">
+                <h1>Contactános</h1>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
@@ -61,7 +64,7 @@
                 </div>
                 <div class="redes row row-md-6">
                     <ul class="redes">
-                        <h2>Redes Sociales</h2>
+                        <h4>Redes Sociales</h4>
                         <li>
                             <img class=pequeña src="./images/twitter.png">
                             <a>Twitter</a>            
