--- a/galeria.html
+++ b/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Realta - Aquitectura + Interiorismo. Estudio ubicado en la ciudad de Cipolletti - Rio Negro. Galeria de imagenes">
+    <meta name="keywords" content="Arquitectura, Interiorismo, Cipolletti, Galeria">
     <title>Realtà - Galeria</title>
     
     <link rel="stylesheet" href="./css/bootstrap.css">
