--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Realta - Aquitectura + Interiorismo. Estudio ubicado en la ciudad de Cipolletti - Rio Negro. Servicios">
+    <meta name="keywords" content="Arquitectura, Asesoramiento, Interiorismo, Direccion, Renders">
     <title>Realtà - Servicios</title>
     
     <link rel="stylesheet" href="./css/bootstrap.css">
