Modal galeria y vinculos footer

--- a/servicios.html
+++ b/servicios.html
@@ -72,16 +72,16 @@
             <h3>Social</h3>
             <ul>
                 <li>
-                <a>Twitter</a>            
+                <a href="http://www.twitter.com">Twitter</a>            
                 </li>
                 <li>
-                <a>Facebook</a>
+                <a href="http://www.facebook.com">Facebook</a>
                 </li>
                 <li>
-                <a>Instagram</a>
+                <a href="http://www.instagram.com">Instagram</a>
                 </li>
                 <li>
-                <a>Youtube</a>
+                <a href="http://www.youtube.com">Youtube</a>
                 </li>
             </ul>
         </div>
