--- a/contacto.html
+++ b/contacto.html
@@ -66,8 +66,8 @@
                     <ul class="redes">
                         <h4>Redes Sociales</h4>
                         <li>
-                            <img class=pequeña src="./images/twitter.png">
-                            <a>Twitter</a>            
+                            <img class="pequeña" src="./images/twitter.png">
+                            <a href="http://www.twitter.com">Twitter</a>            
                         </li>
                         <li>
                             <img class=pequeña src="./images/facebook.jpg">
@@ -98,16 +98,16 @@
             <h3>Social</h3>
             <ul>
                 <li>
-                <a>Twitter</a>            
+                <a href="http://www.twitter.com">Twitter</a>            
                 </li>
                 <li>
-                <a>Facebook</a>
+                <a href="http://www.facebook.com">Facebook</a>
                 </li>
                 <li>
-                <a>Instagram</a>
+                <a href="http://www.instagram.com">Instagram</a>
                 </li>
                 <li>
-                <a>Youtube</a>
+                <a href="http://www.youtube.com">Youtube</a>
                 </li>
             </ul>
         </div>
