--- a/servicios.html
+++ b/servicios.html
@@ -66,9 +66,9 @@
     <footer class="pie row justify-content-between text-center">
         <div class="dis der-dis-lg col-12 col-lg-4">
             <p class="dis d-flex justify-content-start">Todos los derechos reservados</p>
-            <p class="dis fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
+            <p class="dis rm fw-bold d-flex justify-content-start">Powered by RM-Diseños</p>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-5 col-lg-4">
             <h3>Social</h3>
             <ul>
                 <li>
@@ -85,7 +85,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4">
             <h3>Enlaces</h3>
                 <ul>
                     <li>
@@ -104,7 +104,7 @@
         </div>   
         <div class="dis d-lg-none col-12 col-lg-3">
             <p class="dis d-flex">Todos los derechos reservados</p>
-            <p class="dis d-flex">Powered by RM-Diseños</p>
+            <p class="dis rm d-flex">Powered by RM-Diseños</p>
         </div> 
     </footer>
 
