--- a/contacto.html
+++ b/contacto.html
@@ -71,15 +71,15 @@
                         </li>
                         <li>
                             <img class=pequeña src="./images/facebook.jpg">
-                            <a>Facebook</a>
+                            <a href="http://www.facebook.com">Facebook</a>
                         </li>
                         <li>
                             <img class=pequeña src="./images/instagram.jpg">
-                            <a>Instagram</a>
+                            <a href="http://www.instagram.com">Instagram</a>
                         </li>
                         <li>
                             <img class=pequeña src="./images/youtube.jpg">
-                            <a>Youtube</a>
+                            <a href="http://www.youtubecom">Youtube</a>
                         </li>
                         </ul>
                 </div>
