--- a/galeria.html
+++ b/galeria.html
@@ -90,7 +90,7 @@
             <div class="modal-dialog modal-lg modal-dialog-centered">
               <div class="modal-content bg-dark">
                 <img class="m-2" src="./images/galeria05.jpg">
-                <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 p-3" data-bs-dismiss="modal" aria-label="Close"></button> 
+                <button type="button" class="btn-close btn-close position-absolute top-0 end-0 p-3" data-bs-dismiss="modal" aria-label="Close"></button> 
               </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
             <div class="modal-dialog modal-lg modal-dialog-centered">
               <div class="modal-content bg-dark">
                 <img class="m-2" src="./images/galeria15.jpg">
-                <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 p-3" data-bs-dismiss="modal" aria-label="Close"></button> 
+                <button type="button" class="btn-close btn-close position-absolute top-0 end-0 p-3" data-bs-dismiss="modal" aria-label="Close"></button> 
               </div>
             </div>
         </div>
